# vault-mcp-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  acceptance.sh  bootstrap.sh  dev.py  main.py  pyproject.toml  unit.sh
.circleci/: config.yml
.github/workflows/: ci.yaml
mcp_bindings/: provider.py  server.py
src/vault_mcp_server/: __init__.py  __main__.py  dev.py
src/vault_mcp_server/mcp_bindings/: provider.py  server.py
src/vault_mcp_server/vault/: client.py  multi.py
src/vault_mcp_server/vault/secret/: database.py  identity.py  kv2.py  pki.py  transit.py
src/vault_mcp_server/vault/sys/: audit.py  auth.py  policy.py  raft.py  secret.py
tests/: utils.py
tests/mcp_bindings/: test_provider.py  test_server.py
tests/vault/: test_client.py
tests/vault/secret/: test_identity.py  test_kv2.py  test_pki.py  test_transit.py
tests/vault/sys/: test_audit.py  test_auth.py  test_policy.py  test_raft.py  test_secret.py
vault/: audit.py  auth.py  client.py  kv2.py  policy.py  secret.py  transit.py
vault/secret/: kv2.py  transit.py
vault/sys/: audit.py  auth.py  policy.py  secret.py
