[project]
name = "vault-mcp-server"
version = "1.0.0"
description = "MCP Server for Vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvac>=2.4.0,<3.0.0",
    "fastmcp>=2.12.0,<2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
vault-mcp-server = "vault_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"